--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Home - WolfBeacon</title>
+
     	<meta name="description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons.
 ">        <meta name="mpID" content="2206b29843ecafa55c6f6ef90bfb2d85">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <meta name="siteURL" content="index.html">
         <link rel="apple-touch-icon" sizes="180x180" href="img/fav.png">
         <link rel="icon" href="img/fav.png" size="16x16">
@@ -31,7 +32,10 @@
 <meta name="twitter:title" content="WolfBeacon" />
 
 <link rel='stylesheet' id='main-styles-css'  href='css/main.css' type='text/css' media='all' />
- 
+ <script src="https://cdn.auth0.com/js/lock/10.8/lock.min.js"></script>
+     <script src="http://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
+
+
     </head>
     <body class="is-home-page">
 
@@ -55,8 +59,8 @@
             <li><a class="nav__link is-features-link" href="features.html" title="Features">Features</a></li>
             <li><a class="nav__link is-how-it-works-link" href="how-it-works.html" title="How it works">How it works</a></li>
             <li><a class="nav__link is-faq-link" href="https://github.com/WolfBeacon" title="Contribute to our github">Contribute</a></li>
-            <li><a class="nav__link is-faq-link" href="index.html#" title="Sign In">Sign In</a></li>
-            <li><a class="button -fill -trial-button" href="index.html#" data-modal-id="getStarted" title="Sign Up for FREE">Sign Up for free</a></li>
+            <li><a class="nav__link is-faq-link modal-launcher" href="index.html#" data-modal-id="getStarted"  title="Sign In">Sign In</a></li>
+            <li><a class="button -fill -trial-button modal-launcher" href="index.html#" data-modal-id="getStarted" title="Sign Up for FREE">Sign Up for free</a></li>
         </ul>
         <div class="nav-footer u--mobile">
             <ul class="footer__nav footer__nav--left">
@@ -155,7 +159,7 @@
             <div class="text-panel -text-center">
                 <h2 class="-title-1 home-hero-title"> <span style="text-align: center;" class="hero-title-2">Hackathon Organization & Aggregation</span></h2>
                 <p>WolfBeacon is the world's first ever hackathon organization and aggregation platform. Built collaboratively by university students, from all seven continents, WolfBeacon streamlines the process of searching for hackathons and serves as an all-in-one package when it comes to building your own hackathons.</p>
-                <a class="button -fill -large -dark-shadow -margin-bottom" href="how-it-works/index.html" title="How it works">How it works</a>
+                <a class="button -fill -large -dark-shadow -margin-bottom" href="how-it-works.html" title="How it works">How it works</a>
             </div>
         </div>
     </div>
@@ -177,7 +181,7 @@
                     <h2 class="-title-1">Everything you need in one platform, right out of the box.
 </h2>
                     <p>WolfBeacon platforms are multi-native, utiltizes geolocation technologies and updates in real-time displaying changes the second you make it.</p>
-                    <a class="button -fill -margin-top" href="features/index.html" title="Explore Features">Explore Features</a>
+                    <a class="button -fill -margin-top" href="features.html" title="Explore Features">Explore Features</a>
                 </div>
             </div>
         </div>
@@ -202,8 +206,8 @@
                 <h2 class="-title-hero">Sign Up Today</h2>
                 <p class="-lead">There are tons of terrific hackathons out there people miss or go undone due to a lack of platforms to fill in the gap. So get started now and make your life 100 times easier with WolfBeacon.
 </p>
-                <a class="button -fill -dark-shadow -xlarge  -margin-bottom" href="index.html#" data-modal-id="getStarted" title="SignUp Now">Sign Up Now</a>
-                <a style=" border: 2px #37adcb; " class=" button -xlarge   -margin-bottom" href="index.html#"   title="Sign In">Sign In</a>
+                <a class="button -fill -dark-shadow -xlarge  -margin-bottom modal-launcher" href="index.html#" data-modal-id="getStarted" title="SignUp Now">Sign Up Now</a>
+                <a style=" border: 2px #37adcb; " class=" button -xlarge modal-launcher   -margin-bottom" href="index.html#"   title="Sign In">Sign In</a>
              </div>
         </div>
     </div>
@@ -219,7 +223,7 @@
 				<li><a class="is-about-paymark-link" href="about-us.html" title="Built With ♥ By The Hacker Community">Built With ♥ by the hacker community</a></li>
                 <li><a class="icon-twitter" href="https://twitter.com/wolf_beacon?lang=en" target="_blank"></a></li>
                 <li><a class="icon-fb" href="https://twitter.com/wolf_beacon?lang=en" target="_blank"></a></li>
-                <li><a class="icon-email" href="mailto:?subject=WolfBeacon&body=Use this space to write us a message" title="WolfBeacon"></a></li>
+                <li><a class="" href="mailto:hello@wolfbeacon.com?subject=WolfBeacon&body=Use this space to write us a message" title="WolfBeacon">Contact Us</a></li>
 			</ul>
 			<ul class="footer__nav footer__nav--right">
 				<li><a class="is-privacy-link" href="index.html" title="Privacy">Privacy</a></li>
@@ -229,63 +233,33 @@
 	</div>
 </footer>
 
-<div class="modal is-reminder-modal remodal" data-remodal-id="reminder" data-remodal-options="hashTracking: false">
+
+<div class="modal" data-remodal-id="getStarted" data-remodal-options="hashTracking: false">
     <div class="modal__container">
-        <div class="modal__section -off-white-background">
-            <h3 class="-title-2 -text-centre">Paypr invitation</h3>
+            <div id="login-box" class="login-box " style="display: block;position:relative;
+ width: 100%; height: 100%;" id="root">
+        <div class="loader loader--style2" title="1">
+            <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+                <path fill="#000" d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z">
+                    <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 25 25" to="360 25 25" dur="0.6s" repeatCount="indefinite" />
+                </path>
+            </svg>
         </div>
-        <div class="modal__section -blue-background -white-text">
-            <p>Send an invite to your standard or adviser Xero user.</p>
-            <form class="form" method="post" action="https://www.paypr.co.nz/" id="reminderForm">
-                <div class="form__input-row">
-                    <input type="text" name="yourName" id="yourName" placeholder="Your name"/>
-                    <label>Your name</label>
-                </div>
-                <div class="form__input-row">
-                    <input type="text" name="reminderName" id="reminderName" placeholder="Their name"/>
-                    <label>Their name</label>
-                </div>
-                <div class="form__input-row">
-                    <input type="text" name="reminderEmail" id="reminderEmail" placeholder="Their email"/>
-                    <label>Their email</label>
-                </div>
-                <div class="form__message-row form-message"></div>
-                <div class="form__submit-row -text-center">
-
-                    <p class="legal">By clicking send, you acknowledge we have consent to send this one off invite email to your Xero standard or adviser user.</p>
-                    <button type="submit" id="reminderSubmit" class="button -fill -medium" data-success-message="Your reminder email has been sent." data-error-message="There was an issue sending a reminder. Please try again.">Send</button>
-
-                </div>
-            </form>
-        </div>
+    </div>
+         
     </div>
     <div class="modal__close dismiss">close</div>
 </div>
-<div class="modal remodal" data-remodal-id="getStarted" data-remodal-options="hashTracking: false">
-    <div class="modal__container">
-        <div class="modal__section -off-white-background">
-            <h3 class="-title-1">Let's get you started with WolfBeacon</h3>
-            <p class="list-ul -text-center">
-               To complete your sign up you need to be the standard or adviser Xero user. If that's not you, send a Paypr invite.
-            </p>
-        </div>
-        <div class="modal__section -blue-background -white-text">
-            <ul class="button-list">
-                <li><a class="button -fill" href="#" title="Create Your Wolf">Create Your Wolf</a></li>
-                <li><a class="button -on-blue modal-launcher" href="i#" data-modal-id="reminder" title="Create Your Beacon">Create Your Beacon</a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="modal__close dismiss">close</div>
-</div>
+
+
+<script src="http://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
+
+
+    <script type="text/javascript" src="js/app.js"></script>
+     
 <script type="text/javascript" src="js/main.js"></script>
+
+
   	</body>
  </html>
-<div class="modal remodal-video remodal" data-remodal-id="watch" data-remodal-options="hashTracking: false">    
-    <div class="modal__container">
-        <div class="modal__video -off-white-background">
-        	<iframe width="560" height="315" src="https://www.youtube.com/embed/CPUA-nzOUUU?rel=0&amp;showinfo=0&amp;enablejsapi=1" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </div>
-    </div>
-    <div class="modal__close dismiss">close</div>
-</div>
+ 
