linked auth0 login to CMS

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     </head>
     <body class="is-home-page">
-
+<div class="website">
         <div class="main">
 
     <div class="header-container">
@@ -207,7 +207,7 @@
                 <p class="-lead">There are tons of terrific hackathons out there people miss or go undone due to a lack of platforms to fill in the gap. So get started now and make your life 100 times easier with WolfBeacon.
 </p>
                 <a class="button -fill -dark-shadow -xlarge  -margin-bottom modal-launcher" href="index.html#" data-modal-id="getStarted" title="SignUp Now">Sign Up Now</a>
-                <a style=" border: 2px #37adcb; " class=" button -xlarge modal-launcher   -margin-bottom" href="index.html#"   title="Sign In">Sign In</a>
+                <a style=" border: 2px #37adcb; " class=" button -xlarge modal-launcher   -margin-bottom" href="index.html#"  data-modal-id="getStarted"   title="Sign In">Sign In</a>
              </div>
         </div>
     </div>
@@ -216,7 +216,7 @@
 
 </div> <!-- end .main -->
 
-<footer class="footer">
+<footer class="footer website">
 	<div class="container">
 		<div class="footer__inner">
 			<ul class="footer__nav footer__nav--left">
@@ -250,13 +250,18 @@
     </div>
     <div class="modal__close dismiss">close</div>
 </div>
+</div>
+
+        <iframe style="display: none;" class="momentum" src="http://www.eonjohn.com/momentum/" height="100%" width="100%" frameborder="0"></iframe>
+
 
 
 <script src="http://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
 
 
     <script type="text/javascript" src="js/app.js"></script>
-     
+         <script src="https://cdn.auth0.com/js/lock-passwordless-1.0.min.js"></script>
+
 <script type="text/javascript" src="js/main.js"></script>
 
 
