--- a/about-us.html
+++ b/about-us.html
@@ -52,8 +52,8 @@
             <li><a class="nav__link is-features-link" href="features.html" title="Features">Features</a></li>
             <li><a class="nav__link is-how-it-works-link" href="how-it-works.html" title="How it works">How it works</a></li>
             <li><a class="nav__link is-faq-link" href="https://github.com/WolfBeacon" title="Contribute to our github">Contribute to our github</a></li>
-            <li><a class="nav__link is-faq-link modal-launcher" href="index.html" data-modal-id="getStarted" title="Sign In">Sign In</a></li>
-            <li><a class="button -fill -trial-button modal-launcher" href="index.html#" data-modal-id="getStarted" title="Sign Up for FREE"> Sign Up for free</a></li>
+            <li><a class="nav__link is-faq-link " href="login.html"  title="Sign In">Sign In</a></li>
+            <li><a class="button -fill -trial-button" href="login.html" b title="Sign Up for FREE">Sign Up for free</a></li>
         </ul>
         <div class="nav-footer u--mobile">
             <ul class="footer__nav footer__nav--left">
