--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <meta property="og:title" content="WolfBeacon" />
         <meta property="og:url" content="index.html" />
-        <meta property="og:image" content="http://www.eonjohn.com/img/fav.png" />
+        <meta property="og:image" content="img/fav.png" />
         <meta property="og:description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
 
 
@@ -28,7 +28,7 @@
 <meta property="og:title" content="WolfBeacon" />
 <meta property="og:url" content="https://www.eonjohn.com/wolfbeacon" />
 <meta property="og:site_name" content="WolfBeacon" />
-<meta name="twitter:card" content="summary" />
+<meta name="twitter:card" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
 <meta name="twitter:title" content="WolfBeacon" />
 
 <link rel='stylesheet' id='main-styles-css'  href='css/main.css' type='text/css' media='all' />
@@ -59,8 +59,8 @@
             <li><a class="nav__link is-features-link" href="features.html" title="Features">Features</a></li>
             <li><a class="nav__link is-how-it-works-link" href="how-it-works.html" title="How it works">How it works</a></li>
             <li><a class="nav__link is-faq-link" href="https://github.com/WolfBeacon" title="Contribute to our github">Contribute</a></li>
-            <li><a class="nav__link is-faq-link modal-launcher" href="index.html#" data-modal-id="getStarted"  title="Sign In">Sign In</a></li>
-            <li><a class="button -fill -trial-button modal-launcher" href="index.html#" data-modal-id="getStarted" title="Sign Up for FREE">Sign Up for free</a></li>
+            <li><a class="nav__link is-faq-link " href="login.html"  title="Sign In">Sign In</a></li>
+            <li><a class="button -fill -trial-button" href="login.html" b title="Sign Up for FREE">Sign Up for free</a></li>
         </ul>
         <div class="nav-footer u--mobile">
             <ul class="footer__nav footer__nav--left">
