added gsoc + fixed wolf + iPhone screens

--- a/404.html
+++ b/404.html
@@ -52,8 +52,8 @@
             <li><a class="nav__link is-features-link" href="features.html" title="Features">Features</a></li>
             <li><a class="nav__link is-how-it-works-link" href="how-it-works.html" title="How it works">How it works</a></li>
             <li><a class="nav__link is-faq-link" href="https://github.com/WolfBeacon" title="Contribute to our github">Contribute</a></li>
-            <li><a class="nav__link is-faq-link modal-launcher" href="index.html" data-modal-id="getStarted" title="Sign In">Sign In</a></li>
-            <li><a class="button -fill -trial-button modal-launcher" href="index.html#" data-modal-id="getStarted" title="Sign Up for FREE"> Sign Up for free</a></li>
+            <li><a class="nav__link is-faq-link " href="login.html"  title="Sign In">Sign In</a></li>
+            <li><a class="button -fill -trial-button" href="login.html" b title="Sign Up for FREE">Sign Up for free</a></li>
         </ul>
         <div class="nav-footer u--mobile">
             <ul class="footer__nav footer__nav--left">
@@ -86,12 +86,15 @@
 <footer class="footer">
     <div class="container">
         <div class="footer__inner">
-            <ul class="footer__nav footer__nav--left">
-                <li><a class="is-about-paymark-link" href="about-us.html" title="Built With ♥ By The Hacker Community">Built With ♥ by the hacker community</a></li>
-                <li><a class="icon-twitter" href="https://twitter.com/wolf_beacon?lang=en" target="_blank"></a></li>
-                <li><a class="icon-fb" href="https://twitter.com/wolf_beacon?lang=en" target="_blank"></a></li>
-                <li><a class="" href="mailto:hello@wolfbeacon.com?subject=WolfBeacon&body=Use this space to write us a message" title="WolfBeacon">Contact Us</a></li>
-            </ul>
+            <ul class="nav">
+            <li><a class="nav__link is-home-link" href="index.html" title="Home">Home</a></li>
+            <li><a class="nav__link is-features-link" href="features.html" title="Features">Features</a></li>
+            <li><a class="nav__link is-how-it-works-link" href="how-it-works.html" title="How it works">How it works</a></li>
+            <li><a class="nav__link is-how-it-works-link" href="projects.html" title="Projects">Projects</a></li>
+            <li><a class="nav__link is-faq-link" href="https://github.com/WolfBeacon" title="Contribute to our github">Contribute</a></li>
+            <li><a class="nav__link is-faq-link " href="login.html"  title="Sign In">Sign In</a></li>
+            <li><a class="button -fill -trial-button" href="login.html" b title="Sign Up for FREE">Sign Up for free</a></li>
+        </ul>
             <ul class="footer__nav footer__nav--right">
                 <li><a class="is-privacy-link" href="index.html" title="Privacy">Privacy</a></li>
                 <li><a class="is-tandc-link" href="index.html" title="Terms &amp; Conditions">Terms &amp; Conditions</a></li>
