fixed projects page title

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Features - WolfBeacon</title>
+        <title>Projects - WolfBeacon</title>
         <meta name="description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons.
 "> <meta name="mpID" content="2206b29843ecafa55c6f6ef90bfb2d85">
         <meta name="viewport" content="width=device-width, initial-scale=1">
