--- a/how-it-works.html
+++ b/how-it-works.html
@@ -51,7 +51,7 @@
             <li><a class="nav__link is-home-link" href="index.html" title="Home">Home</a></li>
             <li><a class="nav__link is-features-link" href="features.html" title="Features">Features</a></li>
             <li><a class="nav__link is-how-it-works-link" href="how-it-works.html" title="How it works">How it works</a></li>
-            <li><a class="nav__link is-how-it-works-link" href="projects.html" title="Projects">Projects</a></li>
+            <li><a class="nav__link" href="projects.html" title="Projects">Projects</a></li>
             <li><a class="nav__link is-faq-link" href="https://github.com/WolfBeacon" title="Contribute to our github">Contribute</a></li>
             <li><a class="nav__link is-faq-link " href="login.html"  title="Sign In">Sign In</a></li>
             <li><a class="button -fill -trial-button" href="login.html" b title="Sign Up for FREE">Sign Up for free</a></li>
