updated projects page

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -13,21 +13,21 @@
         <link rel="icon" href="img/fav.png" type="image/png" sizes="32x32">
         <link rel="icon" href="img/fav.png" type="image/png" sizes="64x64">
 
-        <meta property="og:title" content="WolfBeacon" />
-        <meta property="og:url" content="index.html" />
-        <meta property="og:image" content="http://www.eonjohn.com/img/fav.png" />
-        <meta property="og:description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
-
-
         
+<meta name="description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons."/>
+<meta name="robots" content="noodp"/>
 <link rel="canonical" href="index.html" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
+<meta property="og:image" content="http://www.eonjohn.com/img/fav.png" />
 <meta property="og:title" content="WolfBeacon" />
-<meta property="og:url" content="https://www.eonjohn.com/wolfbeacon" />
+<meta property="og:description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
+<meta property="og:url" content="http://www.wolfbeacon.com/" />
 <meta property="og:site_name" content="WolfBeacon" />
 <meta name="twitter:card" content="summary" />
+<meta name="twitter:description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
 <meta name="twitter:title" content="WolfBeacon" />
+<meta name="twitter:site" content="@wolf_beacon" />
 
 <link rel='stylesheet' id='main-styles-css'  href='css/main.css' type='text/css' media='all' />
  
@@ -164,7 +164,7 @@
                     <div class="getting-set-up__content">
                         <h3 class="subtitle">Choose your platform</h3>
                         <p>When you sign up, you'll have two options: The Hacker Platform or The Organizer Platform. Choose the option that best matches your need.</p>
-                        <p> <a class="text-link " href="index.html#" title="Poke someone who does">Sign up here.</a></p>
+                        <p> <a class="text-link " href="login.html" title="Sign Up Here">Sign up here.</a></p>
                     </div>
                 </li>
                 <li class="getting-set-up__item">
@@ -200,7 +200,7 @@
                     </div>
                     <div class="getting-set-up__content">
                         <h3 class="subtitle">See for yourself</h3>
-                        <p>The sheer number of awesomeness WolfBeacon can bring to you is best experienced live. <a href="#" title="Sign Up" target="blank">Sign up</a> today and see for yourself.</p>
+                        <p>The sheer number of awesomeness WolfBeacon can bring to you is best experienced live. <a href="login.html" title="Sign Up" target="blank">Sign up</a> today and see for yourself.</p>
                     </div>
                 </li>
             </ul>
@@ -215,7 +215,7 @@
                  <div class="all-you-need-is-less__content">
                     <h3 class="-title-1">Sign Up Today</h3>
                     <p class="-lead">There are tons of terrific hackathons out there people miss or go undone due to a lack of platforms to fill in the gap. So get started now and make your life 100 times easier with WolfBeacon.</p>
-                     <a class="button -fill -dark-shadow -xlarge modal-launcher  -margin-bottom" href="index.html#" data-modal-id="getStarted" title="SignUp Now">Sign Up Now</a>
+                     <a class="button -fill -dark-shadow -xlarge   -margin-bottom" href="login.html" title="SignUp Now">Sign Up Now</a>
                 <a style=" border: 2px #37adcb; " class=" button -xlarge  modal-launcher   -margin-bottom" href="index.html#"   title="Sign In">Sign In</a>
                 </div>
             </div>
