--- a/404.html
+++ b/404.html
@@ -4,8 +4,6 @@
         <meta charset="UTF-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Page Not Found - WolfBeacon</title>
-       <meta name="description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons.
-">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="siteURL" content="index.html">
         <link rel="apple-touch-icon" sizes="180x180" href="img/fav.png">
@@ -13,21 +11,21 @@
         <link rel="icon" href="img/fav.png" type="image/png" sizes="32x32">
         <link rel="icon" href="img/fav.png" type="image/png" sizes="64x64">
 
-        <meta property="og:title" content="WolfBeacon" />
-        <meta property="og:url" content="index.html" />
-        <meta property="og:image" content="http://www.eonjohn.com/img/fav.png" />
-        <meta property="og:description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
-
-
         
+<meta name="description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons."/>
+<meta name="robots" content="noodp"/>
 <link rel="canonical" href="index.html" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
+<meta property="og:image" content="http://www.eonjohn.com/img/fav.png" />
 <meta property="og:title" content="WolfBeacon" />
-<meta property="og:url" content="https://www.eonjohn.com/wolfbeacon" />
+<meta property="og:description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
+<meta property="og:url" content="http://www.wolfbeacon.com/" />
 <meta property="og:site_name" content="WolfBeacon" />
 <meta name="twitter:card" content="summary" />
+<meta name="twitter:description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
 <meta name="twitter:title" content="WolfBeacon" />
+<meta name="twitter:site" content="@wolf_beacon" />
 
 <link rel='stylesheet' id='main-styles-css'  href='css/main.css' type='text/css' media='all' />
  
@@ -36,8 +34,8 @@
 
         <div class="main">
 
-   <header class="header">
-        <div class="header__container container">
+    <header class="header">
+        <div style="background-color: #37adcb;" class="header__container container">
     <div class="header__inner">
         <div class="header__logo">
             <a href="index.html" title="WolfBeacon">
@@ -51,6 +49,7 @@
             <li><a class="nav__link is-home-link" href="index.html" title="Home">Home</a></li>
             <li><a class="nav__link is-features-link" href="features.html" title="Features">Features</a></li>
             <li><a class="nav__link is-how-it-works-link" href="how-it-works.html" title="How it works">How it works</a></li>
+            <li><a class="nav__link is-how-it-works-link" href="projects.html" title="Projects">Projects</a></li>
             <li><a class="nav__link is-faq-link" href="https://github.com/WolfBeacon" title="Contribute to our github">Contribute</a></li>
             <li><a class="nav__link is-faq-link " href="login.html"  title="Sign In">Sign In</a></li>
             <li><a class="button -fill -trial-button" href="login.html" b title="Sign Up for FREE">Sign Up for free</a></li>
@@ -64,7 +63,8 @@
             </ul>
         </div>
     </div>
-</div>
+
+ 
     </header>
 
     <div class="panel">
@@ -74,8 +74,8 @@
                 <h2>This is not the page you're looking for...</h2>
                 <p>...You can go about your business. Move along.</p>
                 <ul class="button-list">
-                    <li><a class="button -no-shadow" href="index.html" title="WolfBeacon Home">Home</a></li>
-                    <li><a class="button -no-shadow" href="index.html" title="Sign Up">Sign Up Today</a></li>
+                    <li><a class="button -no-shadow -fill" href="index.html" title="WolfBeacon Home">Home</a></li>
+                    <li><a class="button -no-shadow -fill" href="login.html" title="Sign Up">Sign Up Today</a></li>
                 </ul>
             </div>
         </div>
@@ -83,18 +83,15 @@
 
     </div> <!-- end .main -->
 
-<footer class="footer">
+<footer class="footer website">
     <div class="container">
         <div class="footer__inner">
-            <ul class="nav">
-            <li><a class="nav__link is-home-link" href="index.html" title="Home">Home</a></li>
-            <li><a class="nav__link is-features-link" href="features.html" title="Features">Features</a></li>
-            <li><a class="nav__link is-how-it-works-link" href="how-it-works.html" title="How it works">How it works</a></li>
-            <li><a class="nav__link is-how-it-works-link" href="projects.html" title="Projects">Projects</a></li>
-            <li><a class="nav__link is-faq-link" href="https://github.com/WolfBeacon" title="Contribute to our github">Contribute</a></li>
-            <li><a class="nav__link is-faq-link " href="login.html"  title="Sign In">Sign In</a></li>
-            <li><a class="button -fill -trial-button" href="login.html" b title="Sign Up for FREE">Sign Up for free</a></li>
-        </ul>
+            <ul class="footer__nav footer__nav--left">
+                <li><a class="is-about-paymark-link" href="about-us.html" title="Built With ♥ By The Hacker Community">Built With ♥ by the hacker community</a></li>
+                <li><a class="icon-twitter" href="https://twitter.com/wolf_beacon?lang=en" target="_blank"></a></li>
+                <li><a class="icon-fb" href="https://twitter.com/wolf_beacon?lang=en" target="_blank"></a></li>
+                <li><a class="" href="mailto:hello@wolfbeacon.com?subject=WolfBeacon&body=Use this space to write us a message" title="WolfBeacon">Contact Us</a></li>
+            </ul>
             <ul class="footer__nav footer__nav--right">
                 <li><a class="is-privacy-link" href="index.html" title="Privacy">Privacy</a></li>
                 <li><a class="is-tandc-link" href="index.html" title="Terms &amp; Conditions">Terms &amp; Conditions</a></li>
@@ -102,22 +99,7 @@
         </div>
     </div>
 </footer>
-
-
-<div class="modal remodal" data-remodal-id="getStarted" data-remodal-options="hashTracking: false">
-     <div class="modal__container">
-            <div id="login-box" class="login-box " style="display: block;position:relative;
- width: 100%; height: 100%;" id="root">
-        <div class="loader loader--style2" title="1">
-            <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
-                <path fill="#000" d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z">
-                    <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 25 25" to="360 25 25" dur="0.6s" repeatCount="indefinite" />
-                </path>
-            </svg>
-        </div>
-    </div>
-    <div class="modal__close dismiss">close</div>
-</div>
+ 
     <script src="http://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type='text/javascript' src='js/main.js'></script>
