--- a/about-us.html
+++ b/about-us.html
@@ -6,28 +6,28 @@
         <title>About Us - WolfBeacon</title>
     	<meta name="description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons.
 "> <meta name="mpID" content="2206b29843ecafa55c6f6ef90bfb2d85">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="siteURL" content="index.html">
         <link rel="apple-touch-icon" sizes="180x180" href="img/fav.png">
         <link rel="icon" href="img/fav.png" size="16x16">
         <link rel="icon" href="img/fav.png" type="image/png" sizes="32x32">
         <link rel="icon" href="img/fav.png" type="image/png" sizes="64x64">
 
-        <meta property="og:title" content="WolfBeacon" />
-        <meta property="og:url" content="index.html" />
-        <meta property="og:image" content="http://www.eonjohn.com/img/fav.png" />
-        <meta property="og:description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
-
-
         
+<meta name="description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons."/>
+<meta name="robots" content="noodp"/>
 <link rel="canonical" href="index.html" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
+<meta property="og:image" content="http://www.eonjohn.com/img/fav.png" />
 <meta property="og:title" content="WolfBeacon" />
-<meta property="og:url" content="https://www.eonjohn.com/wolfbeacon" />
+<meta property="og:description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
+<meta property="og:url" content="http://www.wolfbeacon.com/" />
 <meta property="og:site_name" content="WolfBeacon" />
 <meta name="twitter:card" content="summary" />
+<meta name="twitter:description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
 <meta name="twitter:title" content="WolfBeacon" />
+<meta name="twitter:site" content="@wolf_beacon" />
 
 <link rel='stylesheet' id='main-styles-css'  href='css/main.css' type='text/css' media='all' />
  
@@ -86,7 +86,7 @@
                     <p>Our primary goal is to make hackathons more accessible by creating a mobile ecosystem while helping organizers organize a hackathon much easier. Contacting as many hackathon organizers as possible and growing relationships is a huge priority.</p>
              
     				<div class="general-content__button">
-    					<a style="color: #fff;" class="button -large -no-shadow" href="#" title="Sign Up Today" target="_blank">Get Started Today</a>
+    					<a style="color: #fff;" class="button -large -no-shadow" href="login.html" title="Sign Up Today" target="_blank">Get Started Today</a>
     				</div>
                 </div>
             </div>
