changed text color

--- a/projects.html
+++ b/projects.html
@@ -122,7 +122,7 @@ Projects</h2>
     <div  id="animatedModal">
         <!--THIS IS IMPORTANT! to close the modal, the class name has to match the name given on the ID  class="close-animatedModal" -->
         <div style="padding-left: 10px;" id="btn-close-modal" class="close-animatedModal"> 
-            <a  class="button -fill -dark-shadow -xlarge   -margin-bottom "  href="https://github.com/WolfBeacon/0_Home/wiki/Analytics-Project"  target="_blank" style="font-size: 16px; margin-bottom: 1rem; background-color:  #fff; box-shadow: none;"  title="Learn More">Close Project</a>
+            <a    class="button  -dark-shadow -xlarge   -margin-bottom "  href="https://github.com/WolfBeacon/0_Home/wiki/Analytics-Project"  target="_blank" style="font-size: 16px; margin-bottom: 1rem;background-color:  #fff; box-shadow: none;"  title="Learn More">Close Project</a>
         </div>
             
         <div class="modal-content">
