disqus section in correct place

--- a/gsoc-17.html
+++ b/gsoc-17.html
@@ -195,6 +195,11 @@
             <br>
             <br>
         </div>
+
+        <div class="container">
+            <div id="disqus_thread"></div>
+        </div>
+
         <div class=" -space-top-3 "></div>
         <!-- ethos_tiles_container -->
         </div>
@@ -243,7 +248,6 @@
             }
         });
         </script>
-        <div id="disqus_thread"></div>
         <script>
         var disqus_config = function() {
             this.page.url = document.URL;
