Final touches, compressed home image, removed project link, added break for diqus div

--- a/gsoc-17.html
+++ b/gsoc-17.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Projects - WolfBeacon</title>
+    <title>GSoc 17 - WolfBeacon</title>
     <meta name="description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons.
 ">
     <meta name="mpID" content="2206b29843ecafa55c6f6ef90bfb2d85">
@@ -61,7 +61,7 @@
                         <li><a class="nav__link is-home-link" href="index.html" title="Home">Home</a></li>
                         <li><a class="nav__link is-features-link" href="features.html" title="Features">Features</a></li>
                         <li><a class="nav__link is-how-it-works-link" href="how-it-works.html" title="How it works">How it works</a></li>
-                        <li><a class="nav__link is-how-it-works-link" href="projects.html" title="Projects">Projects</a></li>
+                       <!--  <li><a class="nav__link is-how-it-works-link" href="projects.html" title="Projects">Projects</a></li> -->
                         <li><a class="nav__link is-faq-link" href="https://github.com/WolfBeacon" title="Contribute to our github">Contribute</a></li>
                         <li><a class="nav__link is-faq-link " href="login.html" title="Sign In">Sign In</a></li>
                         <li><a class="button -fill -trial-button" href="login.html" b title="Sign Up for FREE">Sign Up for free</a></li>
@@ -195,6 +195,7 @@
             <br>
             <br>
             <div id="disqus_thread"></div>
+            <br>
         </div>
 
         <div class=" -space-top-3 "></div>
