adjusted css, final touch

--- a/gsoc-17.html
+++ b/gsoc-17.html
@@ -41,6 +41,13 @@
         width: 150px;
         border-radius: 10rem;
     }
+
+    @media(min-width:768px) {
+        p, li {
+            text-align: justify !important;
+            text-justify: inter-word !important;
+        }
+    }
     </style>
 </head>
 
@@ -87,7 +94,7 @@
                 <h2 style="text-align: center;" class="-title-1">GSoC 2017 @ WolfBeacon</h2>
             </div>
         </div>
-        <div class="container gsoc" style="width: 80%">
+        <div class="container gsoc" style="width: 84%">
             <h2 id="whatexactlyisgsoc"><u>What Exactly is GSoC?</u></h2>
             <br>
             <p>TLDR; it's where you spend your summer writing code for awesome open source projects sponsored by Google, making $$$$ and rep along the way. </p>
