--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
      <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="siteURL" content="index.html">
+        <meta name="google-site-verification" content="Lb9znnPAK99ifRlHMmjOiVNK1VnzPZArrXcZnWNjIBo" />
         <link rel="apple-touch-icon" sizes="180x180" href="img/fav.png">
         <link rel="icon" href="img/fav.png" size="16x16">
         <link rel="icon" href="img/fav.png" type="image/png" sizes="32x32">
