Added IRC contact, final touch

--- a/gsoc-17.html
+++ b/gsoc-17.html
@@ -142,7 +142,7 @@
             <br>
             <div class="container">
                 <ul style=" list-style-type: disc;">
-                    <li>We have a <em>enviable</em> set of sponsors. They've been gracious enough to offer us their otherwise paid services so we've got access to bleeding edge technologies like Bare Metal High Performance Container Hosting infrastructure by <a href="https://cycle.io">Cycle.io</a>, separate authentication infrastructure <a href="https://auth0.com">Auth0</a>, a fully featured <a href="http://jrebel.com/">jRebel</a> license. And these names aren't even the half of it!</li>
+                    <li>We have a <em>enviable</em> set of sponsors. They've been gracious enough to offer us their otherwise paid services so we've got access to bleeding edge technologies like powerful bare-metal infrastructure for hosting by <a href="https://cycle.io">Cycle.io</a>, state of the art authentication infrastructure by <a href="https://auth0.com">Auth0</a> and loads more!</li>
                     <li>Sponsored Opportunities to attend the best Hackathons across the planet <em>#hype</em></li>
                     <li>AWS credits, Free domains, Stickers and all the good stuff. <em>#awwwwyeah!</em></li>
                     <li>Excellent networking opportunities with our talented community and team members. We have open source ninjas,ex-GSoCers, students who are really experienced with their stack and many of them have worked or interned at enviable places.</li>
@@ -155,11 +155,12 @@
             <div class="container">
                 <ol style="display: list-item!important; list-style-position: inside !important;">
                     <li>1. Introduce yourself in the Disqus section and present a short abstract of your interpretation of the project.</li>
-                    <li>2. Join the Slack channel (see the contact section) where you can discuss ideas with mentors, community members and other folks.</li>
-                    <li>3. Start formalising the requirements, get specific and spec out a great proposal on <a href="https://docs.google.com/document/u/0/?usp=mkt_docs">Google Docs</a></li>
+                    <li>2. Feel free to join the IRC channel (see <a href="#contact">contact</a>) where you can discuss ideas with mentors, community members and other folks.</li>
+                    <li>3. Start formalising the requirements, get specific and spec out a great proposal on <a href="https://docs.google.com/document/u/0/?usp=mkt_docs">Google Docs.</a></li>
                     <li>4. Paste a link to proposal in the Disqus section with comments/feedback enabled on your doc so you can get feedback. </li>
                 </ol>
             </div>
+            <br>
             <p>We'd prefer you <em>not</em> private message the mentors. We're an Open Source community and believe in transparency. You can always contact the admin for any specific queries (See <em>contact</em> section).</p>
             <br>
             <br>
@@ -180,7 +181,7 @@
                 <br>
             </p>
             <h3 id="2wolfbeaconbackendproject">2. WolfBeacon Backend Project</h3>
-            <p>The WolfBeacon Server forms the Backend and API which is utilised by all the apps . We've also built the world's first API that shows you all the Hackathons around the planet in ascending order of their radial distance on simply entering your coordinates. Well, that's just one of the things that makes the backend so cool</p>
+            <p>The WolfBeacon Server forms the Backend and API which is utilised by all the apps . We've also built the world's first API that shows you all the Hackathons around the planet in ascending order of their radial distance on simply entering your coordinates. Well, that's just one of the things that makes the backend so cool.</p>
             <p>The challenge is to apply solid software engineering principles and continue work on building a robust, scalable Backend. Initial challenges would involve shifting to the new Auth0 API implementation and using v1 of the Spring Security toolkit provided by Auth0, implementing a CI/CD pipeline integrating the Cycle API which would enable faster deployments to production and including featured Hackathons endpoints, User Hackathons endpoints and profiles with the help of user data from Auth0.</p>
             <p><em>Skillset</em>: JAVA (highly proficient), <a href="https://projects.spring.io/spring-boot/">Spring-Boot</a>, <a href="http://hibernate.org/">Hibernate</a>, <a href="https://www.docker.com/">Docker</a>, familiarity with <a href="https://auth0.com">Auth0</a> and <a href="https://cycle.io">Cycle</a></p>
             <p><strong>Admin:</strong> <a href="https://www.linkedin.com/in/ralphmaamari">Ralph Maamari</a> </p>
@@ -193,9 +194,7 @@
             <br>
             <h2 id="contact">Contact</h2>
             <p>As far as GSoC specifics go, we'd like to have your ideas and proposal links on our Disqus section as we mentioned earlier. This would help aggregate the ideas and keep a log of FAQs.</p>
-            <p>To communicate with other members and potential students to share ideas, join our official <a href="https://gitter.im">Gitter</a> GSoC chat room
-                <br />
-                <a href="https://gitter.im/wolfbeacon/gsoc-17"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Join the chat at https://gitter.im/wolfbeacon/gsoc-17" /></a>
+            <p>To communicate with other members and potential students to share ideas, join the <code><b>#wolfbeacon</b></code> IRC channel on <a href="https://webchat.freenode.net">irc.freenode.net</a>. Our bot syncs all the IRC comms with our Slack channel we use internally. Needless to say, all communication is two-way, realtime and public.
             </p>
             <p>If you have suggestions/questions/specific queries which cannot be answered in public, feel free to email us at <a href="mailto:hello@wolfbeacon.com">hello@wolfbeacon.com</a></p>
             <br>
