--- a/gsoc-17.html
+++ b/gsoc-17.html
@@ -134,11 +134,11 @@
                     <li>Take the time to <em>be detailed</em> and never leave any pixel untouched.</li>
                     <li>Be <em>self motivated</em> and take responsibility your own work.</li>
                     <li>Have <em>strong communication skills</em> and <em>good work ethic</em>.</li>
-                    <li>If you're a developer, we implicitly assume you have a command over basic tools like Git(squashed commits, anyone?)</li>
+                    <li>Assuming you're a developer, we implicitly assume you have a command over basic tools like Git (squashed commits?), know how to collaborate with a team, issue pull requests and so on.</li>
                 </ul>
             </div>
             <br>
-            <p>We're not looking for any sort of <em>contract developers</em> or folks who are in it for the short run. We're looking for long term developers who are as excited as we are about WolfBeacon. The GSoC project is only going to be a small part of your journey with us so we'd like you to keep that in mind before you submit a proposal. What's in it for you? We have our own set of exclusive <strong>perks</strong>.</p>
+            <p>We're not looking for any sort of <em>contract developers</em> or folks who are in it for the short run. We're looking for long term developers who are as excited as we are about WolfBeacon. The GSoC project is only going to be a small part of your journey with us so we'd like you to keep that in mind before you submit a proposal. What's in it for you? We have our own set of exclusive <b>perks</b>.</p>
             <br>
             <div class="container">
                 <ul style=" list-style-type: disc;">
@@ -153,15 +153,15 @@
             <h3 id="howtoapply">How to Apply</h3>
             <p>The basic process would be:</p>
             <div class="container">
-                <ol style="display: list-item!important; list-style-position: inside !important;">
+                <ol>
                     <li>1. Introduce yourself  and present a short abstract of your ideas for the project in the <a href="#disqus_thread">Disqus section</a> at the bottom of this page</li>
-                    <li>2. Feel free to join the <i>#wolfbeacon </i> freenode IRC channel (see <a href="#contact">contact</a>) where you can discuss ideas with mentors, community members and other folks.</li>
+                    <li>2. Feel free to join the <i>#wolfbeacon </i> freenode IRC channel where you can discuss ideas with mentors, community members and other folks.</li>
                     <li>3. Start formalising the requirements, get specific and spec out a great proposal on <a href="https://docs.google.com/document/u/0/?usp=mkt_docs">Google Docs.</a></li>
                     <li>4. Paste a link to proposal in the Disqus section with comments/feedback enabled on your doc so you can get feedback. </li>
                 </ol>
             </div>
             <br>
-            <p>We'd prefer you <em>not</em> private message the mentors. We're an Open Source community and believe in transparency. You can always contact the admin for any specific queries (See <em>contact</em> section).</p>
+            <p>We'd prefer you <em>not</em> private message the mentors. We're an Open Source community and believe in transparency. You can always contact the admin for any specific queries (see <a href="#contact">contact</a>).</p>
             <br>
             <br>
             <hr>
@@ -175,8 +175,8 @@
             <p>WolfBeacon's Analytics Platform will allow Hackathon Organizers to reach deeper into the interactions and reviews of workshops/ events and the Hackathon itself. With a modern and clean UI paired with UX design strategies, the Analytics Platform will revolutionize the way Hackathons are organized and how feedback is responded to within the coming years. </p>
             <p>We're looking for talented and passionate Front-end developers who will take a mock-up into a full functioning application with their development skills.</p>
             <p><em>Skillset</em>:  The usual - <i>HTML/CSS/JavaScript/jQuery</i>. Experience with <a href="https://facebook.github.io/react/">React.js</a> or <a href="https://angularjs.org/">Angular.js</a>. As a good UI/UX/Frontend developer, we expect you to come up with wireframes and prototypes, in turn translating them into code. Some basic understanding of Analytics/Data Science is a plus but not a requirement.</p>
-            <p><strong>Admin:</strong> <a href="https://www.linkedin.com/in/ralphmaamari">Ralph Maamari</a></p>
-            <p><strong>Mentors:</strong> <a href="https://www.linkedin.com/in/avikantz">Avikant</a> &amp; <a href="https://www.linkedin.com/in/nairakshay">Akshay</a></p>
+            <p><b>Mentors:</b> <a href="https://www.linkedin.com/in/avikantz">Avikant</a> &amp; <a href="https://www.linkedin.com/in/nairakshay">Akshay</a></p>
+            <p><b>Admin:</b> <a href="https://www.linkedin.com/in/ralphmaamari">Ralph Maamari</a></p>
             <p>
                 <br>
             </p>
@@ -184,15 +184,15 @@
             <p>The WolfBeacon Server forms the Backend and API which is utilised by all the apps . We've also built the world's first API that shows you all the Hackathons around the planet in ascending order of their radial distance on simply entering your coordinates. Well, that's just one of the things that makes the backend so cool.</p>
             <p>The challenge is to apply solid software engineering principles and continue work on building a robust, scalable Backend. Initial challenges would involve shifting to the new Auth0 API implementation and using v1 of the their Spring Security toolkit library, implementing a CI/CD pipeline integrating the Cycle API which would enable faster deployments to production and including featured Hackathons endpoints, User Hackathons endpoints and profiles with the help of user data from Auth0.</p>
             <p><em>Skillset</em>: JAVA (highly proficient), <a href="https://projects.spring.io/spring-boot/">Spring-Boot</a>, <a href="http://hibernate.org/">Hibernate</a>, <a href="https://www.docker.com/">Docker</a>, familiarity with <a href="https://auth0.com">Auth0</a> and <a href="https://cycle.io">Cycle</a></p>
-            <p><strong>Admin:</strong> <a href="https://www.linkedin.com/in/ralphmaamari">Ralph Maamari</a> </p>
-            <p><strong>Mentors:</strong> Alex</p>
-            <p><strong>Note:</strong> The Backend project makes for a rather challenging and demanding task since familiarity/experience with the current codebase and all the relevant technologies is a must. We're on a tight deadline and since all the apps are dependent on the Backend, it's imperative that we get tested code into deployment ASAP. With that being said, we're looking forward to proposals from developers with solid as well as relevant experience and/or those who have already been contributing to WolfBeacon.</p>
+            <p><b>Mentors:</b> <a href="https://github.com/users/TheOriginalAlex" target="_blank">Alex Johnson</a></p>
+            <p><b>Admin:</b> <a href="https://www.linkedin.com/in/ralphmaamari">Ralph Maamari</a> </p>
+            <p><b>Note:</b> The Backend project makes for a rather challenging and demanding task since familiarity/experience with the current codebase and all the relevant technologies is a must. We're on a tight deadline and since all the apps are dependent on the Backend, it's imperative that we get tested code into deployment ASAP. With that being said, we're looking forward to proposals from developers with solid as well as relevant experience and/or those who have already been contributing to WolfBeacon.</p>
             <br>
             <br>
             <hr>
             <br>
             <br>
-            <h2 id="contact">Contact</h2>
+            <h2 id="contact"><u>Contact</u></h2>
             <p>As far as GSoC specifics go, we'd like to have your ideas and proposal links on our Disqus section as we mentioned earlier. This would help aggregate the ideas and keep a log of FAQs.</p>
             <p>Feel free to join the <code><b>#wolfbeacon</b></code> IRC channel on <a href="https://webchat.freenode.net">irc.freenode.net</a> to exchange ideas with members and other potential students. We're internally on Slack but our IRC and Slack channels are synced via <a href="https://github.com/bholagabbar/irackbot" target="_blank">irackbot</a> so all communication between them is two-way, realtime and public.
             </p>
