changed from css file, header

--- a/gsoc-17.html
+++ b/gsoc-17.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>GSoc 17 - WolfBeacon</title>
+    <title>GSoc 17 @ WolfBeacon</title>
     <meta name="description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons.
 ">
     <meta name="mpID" content="2206b29843ecafa55c6f6ef90bfb2d85">
@@ -79,6 +79,11 @@
             text-justify: inter-word !important;
         }
     }
+
+    .gsoc-heading h1 {
+    	font-family: "RemoPro-SemiBold";
+    	color: #262626 !important;
+    }
     </style>
 </head>
 
@@ -120,13 +125,15 @@
                     </div>
                 </div>
         </header>
-        <div class="panel   -space-top-2 -space-bottom-1 getting-set-up-panel">
-            <div class="container -medium gsoc">
-                <h1 style="text-align: center; color: #2d2d2d;" class="-title-1">GSoC 2017 @ WolfBeacon</h1>
+        <br>
+        <div class="panel   -space-top-1 -space-bottom-1 getting-set-up-panel">
+            <div class="container -medium gsoc gsoc-heading">
+                <h1 style="text-align: center; color: #2d2d2d; margin-bottom: 0" class="-title-1">GSoC 2017 @ WolfBeacon</h1>
+                <hr>
             </div>
         </div>
         <div class="container gsoc">
-            <h5 id="attemp"> &#8227; WolfBeacon will be applying for Google Summer of Code 2017 as a participating organization.</h2>
+            <h5 id="attemp"> &#8227; WolfBeacon will be applying for Google Summer of Code 2017 as a participating organization!</h2>
         	<br><br>
             <h2 id="whatexactlyisgsoc"><u>What Exactly is GSoC?</u></h2>
             <br>
